--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqp-ts": "^1.8.0",
     "amqplib": "^0.7.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -27,7 +28,8 @@
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.3.2",
     "mongodb": "^3.6.4",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "winston": "^2.4.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -40,7 +42,6 @@
     "@types/sinon": "^9.0.11",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
-    "amqp-ts": "^1.8.0",
     "chai": "^4.3.3",
     "eslint": "^7.21.0",
     "mocha": "^8.3.1",
