--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,6 +25,7 @@ pipelines:
           - step:
               name: Deploy to production
               deployment: production
+              trigger: manual
               script:
                 - pipe: atlassian/heroku-deploy:1.2.1
                   variables:
