--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "inversify": "^5.0.5",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.3.2",
-    "mongodb": "^3.6.4",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.31",
     "winston": "^2.4.5"
   },
   "devDependencies": {
@@ -38,7 +39,6 @@
     "@types/express": "^4.17.11",
     "@types/helmet": "^4.0.0",
     "@types/mocha": "^8.2.1",
-    "@types/mongodb": "^3.6.9",
     "@types/sinon": "^9.0.11",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
